--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Minimal by Steve Smith</title>
+    <title>Sandeep Ravichandran</title>
 
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/pygment_trac.css">
@@ -33,7 +33,7 @@
           <li><a href="http://twitter.com/sandeepravi">Twitter</a></li>
           <li><a href="http://facebook.com/sandeepravi">Facebook</a></li>
           <li><a href="http://gplus.to/sandeepr">Google+</a></li>
-          <li><a href="http://feeds2.feedburner.com/foobarnbaz">Feed</a></li>
+          <li><a href="http://feeds2.feedburner.com/sandeepravi">Feed</a></li>
         </ul>
         </p>
         <p><small>This blog is powered by <a href="http://github.com/mojombo/jekyll">jekyll</a>.</small></p>
