--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
         <a href="/">Home</a><br/>
         <a href="/">Archives</a><br/>
         <a href="/">Projects</a><br/>
-        <a href="/">About</a><br/>
+        <a href="/about">About</a><br/>
       </header>
       <section>
         {{ content }}
