added previous posts + other changes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Sandeep Ravichandran</title>
 
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/pygment_trac.css">
+    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/pygment_trac.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -19,8 +19,8 @@
         <p></p>
         <p>I'm Sandeep, current working at <a href="http://sourcebits.com">Sourcebits Technologies</a> in Bangalore. I am a Ruby developer and an opensource enthusiast. I like to blog about technology.</p>
         <a href="/">Home</a><br/>
-        <a href="/">Archives</a><br/>
-        <a href="/">Projects</a><br/>
+        <a href="/archive">Archives</a><br/>
+        <a href="http://github.com/sandeepravi">Projects</a><br/>
         <a href="/about">About</a><br/>
       </header>
       <section>
@@ -32,7 +32,7 @@
           <li><a href="http://github.com/sandeepravi">Github</a></li>
           <li><a href="http://twitter.com/sandeepravi">Twitter</a></li>
           <li><a href="http://facebook.com/sandeepravi">Facebook</a></li>
-          <li><a href="http://gplus.to/sandeepr">Google+</a></li>
+          <li><a href="http://http://coderwall.com/sandeepravi">Coderwall</a></li>
           <li><a href="http://feeds2.feedburner.com/sandeepravi">Feed</a></li>
         </ul>
         </p>
