--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,6 +4,10 @@ layout: default
 <div id="post">
   {{ content }}
 </div>
+<p><a href="https://twitter.com/share" class="twitter-share-button" data-via="erjjones">Tweet</a></p>
+
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+
 <div id="disqus_thread"></div>
 <script type="text/javascript">
   /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
