Blog Updated + Added Google Analytics tracking

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,13 +11,29 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    <script type="text/javascript">
+
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-33209012-1']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+       var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+       ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+       var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+       })();
+
+     </script>
   </head>
   <body>
     <div class="wrapper">
       <header>
         <h1>DelusionalCode</h1>
         <p></p>
-        <p>I'm Sandeep, current working at <a href="http://sourcebits.com">Sourcebits Technologies</a> in Bangalore. I am a Ruby developer and an opensource enthusiast. I like to blog about technology.</p>
+        <p>I'm Sandeep, currently working at <a
+          href="http://sourcebits.com">Sourcebits Technologies</a> in
+        Bangalore. I am a Ruby developer and an opensource enthusiast. I
+        like to blog about Ruby, Rails & technology.</p>
         <a href="/">Home</a><br/>
         <a href="/archive">Archives</a><br/>
         <a href="http://github.com/sandeepravi">Projects</a><br/>
