Included company link in layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,6 +50,7 @@
           <li><a href="http://facebook.com/sandeepravi">Facebook</a></li>
           <li><a href="http://http://coderwall.com/sandeepravi">Coderwall</a></li>
           <li><a href="http://feeds2.feedburner.com/sandeepravi">Feed</a></li>
+          <li><a href="http://sourcebits.com">Sourcebits Technologies</a></li>
         </ul>
         </p>
         <p><small>This blog is powered by <a href="http://github.com/mojombo/jekyll">jekyll</a>.</small></p>
